--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid Example</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="code.js" defer></script>
 </head>
 <body>
-  <button id = "change">Change Dimension</button>
-  <div class="container" id="gridContainer"></div>
+    <button id = "change">Change Dimension</button>
+    <div id="flex-container">
+    </div>
 </body>
 </html>
